<resources>
    <string name="app_name">Nightscout GA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="project_name">Nightscout</string>
    <string name="sub_project_name">Guardian Angel</string>
    <string name="hint_user_email">Enter Email ID</string>
    <string name="button_register">Register</string>
    <string name="button_login">Sign In</string>
    <string name="landing_button_sign_in">SIGN IN</string>
    <string name="landing_button_register">REGISTER</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="register_activity_title">Registration</string>
    <string name="login_activity_title">SIGN IN</string>
        <string name="license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmtfDikZcbWSvq3f+pEsAL5KQCNy3X96j++Z1PnjvidpJCEe0/S1xdPs4CfT3JkeQl7SNps/9cPu3EuOOFdx76QPpAqlqXHMKMwM9H+ikx5iUWPSilRjwLfJNjbJZT2xpuI6k32VyHhqLyU4rR95nrAPTGrocyyV1jtTFSYt77YZew8YfeePlcB2STLP3Ookho37Ah1QovelfdaG5ZNWz5OPYKnificSPyYjioYkfUmpnUJvN0INYMGFKefhfPtWPx5UCiQp15A6ir4wH0wVL3/QksonIb0JMiXpuXvWuggNb1AqEtdiPuBTleU5GovKL+HToKjwQu8NSuJsb3EacIwIDAQAB</string>
        <string name="app_id">193559690753525</string>
        <string name="menu_settings">Settings</string>
        <string name="map_api_key">0CuQEeiyP9t4CQE5p1sGqX2hVK4sGY9iV7nSHow</string>
        <string name="addr_url">https://maps.googleapis.com/maps/api/place/search/json?location=%1$s,%2$s&amp;radius=%3$s&amp;name=%4$s&amp;sensor=false&amp;key=%5$s</string>
        <string name="web_name_suggestion">The website name you chose already exists.We suggest :\n\n</string>
        <string name="new_line">\n</string>
        <string name="bounce_to_refresh">bounce refresh</string>
        <string name="bounce_refresh">bounce refresh</string>
        <string name="bounce_refreshing">Refreshing</string>
        <string name="bounce_last_updated">Updated: %1$s</string>
        <string name="sign_up">sign up&#160;</string>
        <string name="forgot_pwd">&#160;forgot your password?&#160;</string>
        <string name="sign_as_another">&#160;sign in as different user&#160;</string>
        <string name="save_data_txt">Save time and \navoid irritation for next time? \nLogin to NowFloats?</string>
        <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
        <string name="pull_to_refresh_release_label">Release to refresh...</string>
        <string name="pull_to_refresh_refreshing_label">Loading...</string>
        <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
        <string name="signup_fname_regex">^([A-z\'\.-ᶜ]*(\s))+[A-z\'\.-ᶜ]*$</string>
        <string name="signup_uname_regex">^[a-z0-9_-]{3,15}$</string>
        <string name="signup_email_regex">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
        <string name="signup_pass_regex">^[a-z0-9_-]{3,15}$</string>
        <string name="signup_cpass_regex">^[a-z0-9_-]{3,15}$</string>
        <string name="regex_default">.{1,}</string>
        <string name="regex_all">.*</string>
        <string name="signup_bname">.{3,}</string>
        <string name="signup_pin">^[0-9]{6,15}</string>
        <string name="signup_phoneCode">^[0-9]{1,4}</string>
        <string name="signup_subd">^[a-zA-Z0-9][a-zA-Z0-9-]{1,61}[a-zA-Z0-9]$</string>
        <string name="fv_time_line_list_item_txt">More messages coming up...</string>
        <string name="ln_login_main1_popup_username_box_hint">Email ID</string>
        <string name="ln_login_main1_popup_pwd_box_hint">Password</string>
        <string name="ln_ac_label">SIGN IN</string>
        <string name="ln_forgot_pswd">forgot your password?</string>
        <string name="ln_signup_btn">sign-up</string>
        <string name="ln1_LoggedAs">You are logged in as</string>
        <string name="ln1_hasLoggedIn">You have logged in as</string>
        <string name="nf_s1_details_text">BUSINESS DETAILS</string>
        <string name="nf_s1_signup_name">Name</string>
        <string name="nf_s1_signup_bname">Business Name</string>
        <string name="nf_s1_signup_bcat">Business Category</string>
        <string name="nf_s1_back">BACK</string>
        <string name="nf_s1_next">NEXT</string>
        <string name="nf_s1_lbl_create_site">Create a website instantly</string>
        <string name="nf_s1_lbl_create_site_disclaimer">We will use your Facebook page details to create the site.\nDon\'t worry we wont take any extra information.</string>
        <string name="nf_s1_lbl_fb_signin">Sign in with Facebook</string>
        <string name="nf_s2_address">BUSINESS ADDRESS</string>
        <string name="nf_s2_signup_addr1">House number, Building Name</string>
        <string name="nf_s2_signup_addr2">Street name, Locality(optional)</string>
        <string name="nf_s2_signup_city">City</string>
        <string name="nf_s2_signup_pin">Pin code</string>
        <string name="nf_s2_signup_country">Country</string>
        <string name="nf_s2_signup_state">State</string>
        <string name="nf_s2_back">BACK</string>
        <string name="nf_s2_next">NEXT</string>
        <string name="nf_s3_detailsText">CONTACT DETAILS</string>
        <string name="nf_s3_signup_email">Email Address</string>
        <string name="nf_s3_signup_phone">Mobile</string>
        <string name="nf_s3_back">BACK</string>
        <string name="nf_s3_next">NEXT</string>
        <string name="label_typeface_def">HN55Roman.ttf</string>
        <string name="ps_create_lbl">CREATE</string>
        <string name="ps_login_lbl">LOG IN</string>
        <string name="ps_create_lbl_tag">a website with NowFloats</string>
        <string name="ps_login_lbl_tag">to manage NowFloats website</string>
        <string name="ps_sc2_lbl1">INSTANT &amp; EASY</string>
        <string name="ps_sc2_lbl2">IDENTITY</string>
        <string name="ps_sc2_lbl3">An online identity for your business that is \ninstantly created &amp; easily managed by the app.\n</string>
        <string name="ps_sc3_lbl1">DISCOVERABLE</string>
        <string name="ps_sc3_lbl2">ON SEARCH</string>
        <string name="ps_sc3_lbl3">With Location-Based-SEO<sup><small>TM</small></sup> get discovered\nfor relevant keyword searches and improve\nyour business search ranking on Google.</string>
        <string name="ps_sc4_lbl1">ENGAGE YOUR</string>
        <string name="ps_sc4_lbl2">CUSTOMERS</string>
        <string name="ps_sc4_lbl3">Keep your existing customers informed and\nlet new ones get in touch through the site.\n</string>
        <string name="ps_sc5_lbl1">GENERATE BUSINESS</string>
        <string name="ps_sc5_lbl2">LEADS</string>
        <string name="ps_sc5_lbl3">More business leads by getting\ndiscovered online &amp; inquiries through\nour \'Talk-To-Business\' feature.</string>
        <string name="ps_sc6_lbl1">SOCIAL SHARING &amp;</string>
        <string name="ps_sc6_lbl2">ANALYTICS</string>
        <string name="ps_sc6_lbl3">Push out your messages to\nfacebook and twitter.\nKnow who is visiting your website and why.</string>
        <string name="ps_sc8_lbl1">PREMIUM FEATURES IN</string>
        <string name="ps_sc8_lbl2">NOWFLOATS</string>
        <string name="ps_sc8_lbl3">Get additional features for your\nbusiness website from the\nin-app NowFloats Store.</string>
        <string name="ps_sc8_lbl4">NOWFLOATS STORE</string>
        <string name="ps_sc1_lbl1_tf">HN53exd.ttf</string>
        <string name="ps_sc1_lbl2_tf">HN53exd.ttf</string>
        <string name="ps_create_lbl_tf">HN75Bold.ttf</string>
        <string name="ps_create_tag_tf">HN56IT.ttf</string>
        <string name="tf_hn75bold">HN75Bold.ttf</string>
        <string name="tf_hlight">HelveticaLight.ttf</string>
        <string name="tf_hn55roman">HN55Roman.ttf</string>
        <string name="tf_hn45light">HN45Light.ttf</string>
        <string name="no_updates_label2">This could be product description or USPs of\nyour business. You will only get discoverd if\nyou post something :)</string>
        <string name="nf_s4_signup_bsubdomain">Website address</string>
        <string name="nf_s4_domain">.nowfloats.com</string>
        <string name="nf_s4_back">BACK</string>
        <string name="nf_s4_next">LOOKS GOOD!</string>
        <string name="nf_s5_addressText">WEBSITE ADDRESS</string>
        <string name="nf_s5_signup_bsubtv">.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com.nowfloats.com</string>
        <string name="nf_s5_domain">.nowfloats.com</string>
        <string name="nf_s5_label">Dont like it? Tap to change it</string>
        <string name="nf_s5_signup_here_btn">HERE!</string>
        <string name="nf_s5_back">BACK</string>
        <string name="nf_s5_next">CREATE MY SITE</string>
        <string name="as_analytics_action_bar_nowfloats_txt">Analytics</string>
        <string name="as_analytics_screen_subscribers_txt">0</string>
        <string name="as_analytics_screen_subscribers_textview">Subscribers</string>
        <string name="as_analytics_screen_visitors_textview">Visits</string>
        <string name="as_analytics_screen_visitors_txt">0</string>
        <string name="as_analytics_screen_search1_textview">Search Queries</string>
        <string name="ba_business_address_top_bar_store_txt">Business Details</string>
        <string name="ba_textView1">Note: The address cannot be changed through the app. You can drop us an email with your new/correct address by hitting the button below. (If you are in India, you can call us on +91 916 000 4303 for the same)</string>
        <string name="ba_call">Email</string>
        <string name="bd_business_details_top_bar_store_txt">Business Details</string>
        <string name="bd_business_details_store_business_name_txt">Business Name</string>
        <string name="bd_business_details_store_business_name_txt_box">Business Name</string>
        <string name="bd_business_details_store_business_desc_txt">Business Description</string>
        <string name="bd_business_details_store_business_desc_txt_box">Business Description</string>
        <string name="bh_business_hours_top_bar_txt">Business Hours</string>
        <string name="bh_business_hours_time_open_button">00:00AM</string>
        <string name="bh_business_hours_time_am_to_txt">to</string>
        <string name="bh_business_hours_time_close_button">00:00PM</string>
        <string name="bh_business_hours_day1_txt">Sunday</string>
        <string name="bh_business_hours_day2_txt">Monday</string>
        <string name="bh_business_hours_day3_txt">Tuesday</string>
        <string name="bh_business_hours_day4_txt">Wednesday</string>
        <string name="bh_business_hours_day5_txt">Thursday</string>
        <string name="bh_business_hours_day6_txt">Friday</string>
        <string name="bh_business_hours_day7_txt">Saturday</string>
        <string name="bl_businessLogo">Business Logo</string>
        <string name="bl_change">Change</string>
        <string name="ci_contact_info_top_bar_store_txt">Contact Numbers</string>
        <string name="ci_contact_info_store_mobile_no1_txt">Phone Numbers</string>
        <string name="ci_contact_info_store_mobile_no1_txt_box">Not available</string>
        <string name="ci_contact_info_store_mobile_no2_txt_box">Not available</string>
        <string name="ci_contact_info_store_email_txt">Email</string>
        <string name="ci_contact_info_store_email_txt_box">no email available</string>
        <string name="ci_contact_info_store_website_txt_box">no website available</string>
        <string name="ci_contact_info_store_fbpage_txt">Facebook Page</string>
        <string name="ci_contact_info_store_fbpage_txt_box">www.facebook.com/</string>
</resources>