<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".LandingActivity"
    android:background="@color/white">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_project_name"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/hint_user_email"
            android:id="@+id/landing_email"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:id="@+id/domain_check_pd"
            style="@style/GenericProgressBackground"
            android:layout_width="@dimen/actionBar_leftButton_layout_width"
            android:layout_height="@dimen/actionBar_leftButton_layout_height"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <ProgressBar style="@style/GenericProgressIndicator" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_register"
            android:id="@+id/landing_button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
